crates/ddlog-syntax/tests/inline/pass/extern_function.dl
// kind:item validate:true
extern function foo() {}
