crates/ddlog-syntax/tests/inline/fail/output_function.dl
// kind:item validate:true
extern output function foo() {}
